--- a/css/styles.css
+++ b/css/styles.css
@@ -334,36 +334,41 @@ body{
     padding-bottom: 2rem;
 }
 
+.cuerpo__caja-formulario__subtitulo{
+    font-size: 2rem;
+    font-weight: bold;
+}
+
 .cuerpo__caja-formulario__formulario{
-    width: 100%;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+    color: var(--anti-flash-white);
+    background-color: var(--erie-black);
+    border: 0.5rem solid var(--maize);
+    border-radius: 2rem; 
 }
 
 .cuerpo__caja-formulario__formulario__campos{
-    padding-top: 1rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
     display: flex;
     flex-direction: column;
+    padding-top: 1rem;
+    padding-right: 1rem;
+    padding-left: 1rem;
     align-items: center;
 }
 
-.cuerpo__caja-formulario__formulario__campos__campo-area{
-    width: 10rem;
-    height: 5rem;
-}
-
 .cuerpo__caja-formulario__formulario__campo-termino{
-    padding-top: 1rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding: 1rem;
     text-align: center;
     align-items: center;
 }
 
 .cuerpo__caja-formulario__formulario__campo-comfirmacion{
-    padding: 1rem;
+    padding-right: 1rem;
+    padding-left: 1rem;
+    padding-bottom: 1rem;
     text-align: center;
     align-items: center;
 }
