--- a/css/styles.css
+++ b/css/styles.css
@@ -1,32 +1,3 @@
-/*
-1.) no utilizar id
-2.) en caso de que un valor se repita poner dicho valor en una propiedad en el elemento mas global
-2.) manterner los valores ordenados
-3.) uso correcto de las posiciones
-4.) utilizar mas relleno (padding) y menos margenes (margin)
-5.) organizar los selectores y utilizar metodologia BEM
-6.) declarar y utilizar variables (lo que son funciones en python)
-*/
-
-/* PARA COLOCAR VARIOS ELEMENTOS EN UN HTML: section>h2+article*4 */
-
-
-
-
-/*DISPLAY*/
-/*POSICION*/
-/*COCOLOCACION*/
-/*TAMAÑO*/
-/*MARGEN*/
-/*RELLENO*/
-/*justify-content*/
-/*align-items*/
-/*justify-items*/
-/*DECORACION DE TEXTO*/
-/*DECORACION DE COLOR*/
-/*DECORACION DE BORDES*/
-
-
 :root {
     --erie-black: #1f1f1f;
     --palatinate-blue: #333fff;
@@ -59,7 +30,7 @@ body{
     align-items: center;
 }
 
-.cabecera__portada__logo{
+.cabecera__logo{
     width: 5rem;
     height: 5rem;
     padding: 1rem;
@@ -73,17 +44,17 @@ body{
     justify-content: space-between;
 }
 
-.cabecera__navegador .cabecera__navegador__casilla-menu {
+.cabecera__navegador .cabecera__casilla-menu {
     display: none;
 }
 
-.cabecera__navegador .cabecera__navegador__icono-menu {
+.cabecera__navegador .cabecera__icono-menu {
     display: flex;
     flex-direction: column;
     padding: 1rem;
 }
 
-.cabecera__navegador__icono-menu .cabecera__navegador__icono-menu__barra1, .cabecera__navegador__icono-menu__barra2, .cabecera__navegador__icono-menu__barra3 {
+.cabecera__icono-menu .cabecera__barra1, .cabecera__barra2, .cabecera__barra3 {
     width: 2.25rem;
     height: 0.4rem;
     margin: 0.3rem 0;
@@ -91,23 +62,23 @@ body{
     transition: 0.4s;
 }
 
-.cabecera__navegador__casilla-menu:checked + .cabecera__navegador__icono-menu .cabecera__navegador__icono-menu__barra1 {
+.cabecera__casilla-menu:checked + .cabecera__icono-menu .cabecera__barra1 {
     transform: rotate(-45deg) translate(-0.5rem, 0.9rem);
 }
 
-.cabecera__navegador__casilla-menu:checked + .cabecera__navegador__icono-menu .cabecera__navegador__icono-menu__barra2 {
+.cabecera__casilla-menu:checked + .cabecera__icono-menu .cabecera__barra2 {
     opacity: 0;
 }
 
-.cabecera__navegador__casilla-menu:checked + .cabecera__navegador__icono-menu .cabecera__navegador__icono-menu__barra3 {
+.cabecera__casilla-menu:checked + .cabecera__icono-menu .cabecera__barra3 {
     transform: rotate(45deg) translate(-0.5rem, -0.9rem);
 }
 
-.cabecera__navegador__casilla-menu:checked ~ .cabecera__navegador__enlaces {
+.cabecera__casilla-menu:checked ~ .cabecera__enlaces {
     display: flex;
 }
 
-.cabecera__navegador__enlaces {
+.cabecera__enlaces {
     display: none;
     flex-direction: column;
     position: absolute;
@@ -115,22 +86,19 @@ body{
     right: 0;
     font-weight: bold;
     background-color: var(--anti-flash-white);
-    transition: translateX(100%) 0.4s ease; /* Efecto de desplazamiento */
 }
 
-.cabecera__navegador__enlaces li {
+.cabecera__enlaces li {
     padding: 1rem;
     text-align: center;
     list-style-type: none;
     border-bottom: 0.1rem solid var(--erie-black);
 }
 
-.cabecera__navegador__enlaces li a {
+.cabecera__enlaces li a {
     text-decoration: none;
     color: var(--erie-black);
 }
-
-/**************************************************************************************************************************************************/
 
 .cuerpo, .cuerpo3{
     display: flex;
@@ -167,15 +135,15 @@ body{
     border-radius: 1rem;
 }
 
-.cuerpo__caja__subtitulo, .cuerpo3__caja__subtitulo{
+.cuerpo__subtitulo, .cuerpo3__subtitulo{
     font-size: 2rem;
 }
 
-.cuerpo__caja__texto, .cuerpo3__caja__texto, .cuerpo__caja__imagen-caja{
+.cuerpo__texto, .cuerpo3__texto, .cuerpo__imagen-caja{
     padding-top: 2rem;
 }
 
-.cuerpo__caja__imagen-caja__imagen{
+.cuerpo__imagen{
     width: 100%;
     border: 0.5rem solid var(--maize);
     border-radius: 2rem;
@@ -188,7 +156,7 @@ body{
     align-items: center;
 }
 
-.cuerpo2__productos__producto{
+.cuerpo2__producto{
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -202,18 +170,17 @@ body{
     border-radius: 1rem;
 }
 
-.cuerpo2__productos__producto__imagen-producto{
+.cuerpo2__imagen-producto{
     padding-bottom: 2rem;
 }
 
-.cuerpo2__productos__producto__imagen-producto__imagen{
-    min-width: 8rem;
+.cuerpo2__imagen{
     width: 100%;
     border: 0.5rem solid var(--maize);
     border-radius: 2rem;
 }
 
-.cuerpo2__productos__producto__boton{
+.cuerpo2__nombre-boton{
     padding-top: 0.5rem;
     padding-right: 1rem;
     padding-left: 1rem;
@@ -224,11 +191,11 @@ body{
     color: var(--anti-flash-white);
     background-color: var(--erie-black);
     border-radius: 2rem;
-    transition: size 0.3s ease,  color 0.3s ease, background-color 0.3s ease, border 0.3s ease, border-radius 0.3s ease;
+    transition: transform 0.3s ease,  color 0.3s ease, background-color 0.3s ease, border 0.3s ease, border-radius 0.3s ease;
 }
 
-.cuerpo2__productos__producto__boton:hover {
-    size: scale(1.1);
+.cuerpo2__nombre-boton:hover {
+    transform: scale(1.1);
     color: var(--erie-black);
     color:var(--erie-black);
     background-color: var(--anti-flash-white);
@@ -249,29 +216,29 @@ body{
     border-radius: 1rem;
 }
 
-.cuerpo2__informacion-producto__imagen-producto{
+.cuerpo2__imagen-informacion-producto{
     width: 100%;
     border: 0.5rem solid var(--maize);
     border-radius: 2rem;
 }
 
-.cuerpo2__informacion-producto__descripcion-producto{
+.cuerpo2__descripcion-producto{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.cuerpo2__informacion-producto__descripcion-producto__nombre-producto{
+.cuerpo2__nombre-producto{
     padding: 2rem;
     font-size: 2rem;
     font-weight: bold;
 }
 
-.cuerpo2__informacion-producto__descripcion-producto__descripcion{
+.cuerpo2__descripcion{
     padding-bottom: 2rem;
 }
 
-.cuerpo2__informacion-producto__boton{
+.cuerpo2__boton-regreso{
     width: 4rem;
     margin-bottom: 2rem;
     padding-top: 0.5rem;
@@ -285,11 +252,11 @@ body{
     color:var(--anti-flash-white);
     background-color: var(--erie-black);
     border-radius: 2rem;
-    transition: size 0.3s ease,  color 0.3s ease, background-color 0.3s ease, border 0.3s ease, border-radius 0.3s ease;
+    transition: transform 0.3s ease,  color 0.3s ease, background-color 0.3s ease, border 0.3s ease, border-radius 0.3s ease;
 }
 
-.cuerpo2__informacion-producto__boton:hover{
-    size: scale(1.1);
+.cuerpo2__boton-regreso:hover{
+    transform: scale(1.1);
     color: var(--erie-black);
     color:var(--erie-black);
     background-color: var(--anti-flash-white);
@@ -312,13 +279,13 @@ body{
     border-radius: 1rem;
 }
 
-.cuerpo__seccion-formulario__subtitulo{
+.cuerpo__subtitulo-formulario{
     padding-top: 2rem;
     font-size: 2rem;
     font-weight: bold;
 }
 
-.cuerpo__seccion-formulario__caja-formulario{
+.cuerpo__caja-formulario{
     display: flex;
     flex-direction: column;
     padding: 2rem;
@@ -327,23 +294,25 @@ body{
     border-radius: 1rem;
 }
 
-.cuerpo__seccion-formulario__caja-formulario__imagen-formulario{
+.cuerpo__imagen-formulario{
     width: 100%;
     padding-top: 2rem;
     padding-bottom: 2rem;
 }
 
-.cuerpo__seccion-formulario__caja-formulario__formulario{
+.cuerpo__formulario{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    padding-bottom: 1rem;
+    align-items: center;
     color: var(--erie-black);
     background-color: var(--anti-flash-white);
     border: 0.5rem solid var(--maize);
     border-radius: 2rem;
 }
 
-.cuerpo__seccion-formulario__caja-formulario__formulario__campos{
+.cuerpo__campos{
     display: flex;
     flex-direction: column;
     padding-top: 1rem;
@@ -352,13 +321,13 @@ body{
     align-items: center;
 }
 
-.cuerpo__seccion-formulario__caja-formulario__formulario__campo-termino{
+.cuerpo__campo-termino{
     padding: 1rem;
     text-align: center;
     align-items: center;
 }
 
-.cuerpo__seccion-formulario__caja-formulario__formulario__campo-comfirmacion{
+.cuerpo__campo-comfirmacion{
     padding-right: 1rem;
     padding-left: 1rem;
     padding-bottom: 1rem;
@@ -366,11 +335,26 @@ body{
     align-items: center;
 }
 
-.cuerpo__redes__subtitulo{
+
+/**************************************************************************************************/
+
+.cuerpo__input{
+    width: 50%;
+    height: 3rem;
     color: var(--anti-flash-white);
+    background-color: var(--erie-black);
+    border: 0.5rem solid var(--maize);
+    border-radius: 2rem;
 }
 
-.cuerpo__redes__red{
+/**************************************************************************************************/
+
+.cuerpo__subtitulo-red{
+    padding-top: 2rem;
+    color: var(--erie-black);
+}
+
+.cuerpo__red{
     width: 4rem;
 }
 
@@ -390,12 +374,12 @@ body{
     height: 1rem;
 }
 
-@media (min-width: 60rem) {
-    .cabecera__navegador__icono-menu, .cabecera__navegador__icono-menu__barra1, .cabecera__navegador__icono-menu__barra2, .cabecera__navegador__icono-menu__barra3 {
+@media (min-width: 768px) {
+    .cabecera__icono-menu, .cabecera__barra1, .cabecera__barra2, .cabecera__barra3 {
         display: none;
     }
 
-    .cabecera__navegador__enlaces {
+    .cabecera__enlaces {
         display: flex;
         flex-direction: row;
         position: static;
@@ -406,11 +390,11 @@ body{
         background-color: var(--palatinate-blue);
     }
 
-    .cabecera__navegador__enlaces li {
+    .cabecera__enlaces li {
         border-bottom: none;
     }
 
-    .cabecera__navegador__enlaces li a {
+    .cabecera__enlaces li a {
         color: var(--anti-flash-white);
     }
 
@@ -419,13 +403,17 @@ body{
         margin: 2rem;
     }
 
+    .cuerpo3 {
+        height: 43.28rem;
+    }
+
     .cuerpo2__productos {
         display: flex;
         flex-direction: row;
         width: 100%;
     }
 
-    .cuerpo2__productos__producto {
+    .cuerpo2__producto {
         width: 50%;
         margin: 1rem;
         padding-bottom: 2rem;
@@ -435,11 +423,11 @@ body{
         flex-direction: row;
     }
 
-    .cuerpo2__informacion-producto__descripcion-producto{
+    .cuerpo2__descripcion-producto{
         padding-left: 2rem;
     }
 
-    .cuerpo2__informacion-producto__descripcion-producto__descripcion {
+    .cuerpo2__descripcion{
         padding-right: 0;
     }
 
@@ -447,14 +435,14 @@ body{
         width: 75%;
     }
 
-    .cuerpo2__seccion-formulario__caja-formulario {
+    .cuerpo__caja-formulario{
         display: flex;
         flex-direction: row;
         padding-top: 2rem;
         align-items: center;
     }
 
-    .cuerpo2__seccion-formulario__caja-formulario__imagen-formulario {
+    .cuerpo__imagen-formulario{
         padding-right: 2rem;
     }
 }
