--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 :root{
     --color-de-cuerpo-y-letra: #ebebeb;
     --color-de-cabecera-y-pie: #f2eb69;
@@ -47,14 +46,14 @@ body{
 }
 
 .cabecera__modo-oscuro{
-    padding-left: 6rem;
-    padding-right: 1rem;
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
     font-weight: bold;
 }
 
 .cabecera__boton-modo-oscuro{
     position: relative;
-    width: 4rem;
+    width: 3.0rem;
     height: 2rem;
     background-color: var(--color-de-caja-y-titulo);
     border-radius: 2rem;
@@ -77,7 +76,7 @@ body{
 }
 
 .cabecera__boton-modo-oscuro:checked::before{
-    transform: translateX(2rem);
+    transform: translateX(0.8rem);
 }
 
 .cabecera__navegador{
@@ -413,7 +412,21 @@ body{
     height: 1rem;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1225px) {
+    .cabecera__modo-oscuro{
+        padding-left: 6rem;
+        padding-right: 1rem;
+        font-weight: bold;
+    }
+
+    .cabecera__boton-modo-oscuro:checked::before{
+        transform: translateX(2rem);
+    }
+
+    .cabecera__boton-modo-oscuro{
+        width: 4rem;
+    }
+
     .cabecera__icono-menu, .cabecera__barra1, .cabecera__barra2, .cabecera__barra3 {
         display: none;
     }
